--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,16 @@ skips = ["B101", "B601"]
 python = "^3.11"
 sphinx = "^6.1.3"
 python-semantic-release = "^7.33.2"
+fastapi-redis-cache = "^0.2.5"
+flake8 = "^6.0.0"
+greenlet = "^2.0.2"
+fastapi = "^0.92.0"
+autoflake = "^2.0.1"
+bandit = "^1.7.4"
+isort = "^5.12.0"
+black = "^23.1.0"
+pytest = "^7.2.2"
+coverage = "^7.2.1"
 
 
 [build-system]
