--- a/pyproject.toml
+++ b/pyproject.toml
@@ -56,6 +56,16 @@ isort = "^5.12.0"
 black = "^23.1.0"
 pytest = "^7.2.2"
 coverage = "^7.2.1"
+preprocessor = "^1.1.3"
+pandas = "^1.5.3"
+xlsxwriter = "^3.0.8"
+twython = "^3.9.1"
+nltk = "^3.8.1"
+tweet-preprocessor = "^0.6.0"
+alphabet-detector = "^0.0.7"
+tweepy = "^4.12.1"
+argcomplete = "^2.1.1"
+python-dotenv = "^1.0.0"
 
 
 [build-system]
